block-nodeport-services/positive-test-case.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-disallowed
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
